--- a/translations/en.json
+++ b/translations/en.json
@@ -8,7 +8,7 @@
   "chooseEncounterType": "Choose an encounter type to link your form to",
   "chooseFieldType": "Choose a field type",
   "chooseQuestionType": "Choose a question type",
-  "close": "Close",
+  "close": "Close button",
   "conceptSearchHelpText": "Can't find a concept?",
   "createForm": "Create Form",
   "createNewForm": "Create a new form",
